test/parser/should_fail/parens4.souc.bad

main() = do
    if "ok"
        print ("wtf paren"
    end if)
end main
